# nextjs-fastapi-template

./: .dockerignore  Makefile  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml
backend/docker/: Dockerfile  Dockerfile.dev
backend/scripts/: mongo-init.js  mongod.conf
backend/src/: database.py  logging_config.py  main.py  minio_client.py  mongodb.py
backend/src/controller/: auth_controller.py  image_controller.py  mongo_user_controller.py  sqlite_user_controller.py
backend/src/models/: mongo_user.py  user.py
backend/src/repository/: base_repository.py  minio_repository.py  mongo_repository.py  user_repository.py
backend/src/schemas/: auth.py  image.py  mongo_user.py  user.py
backend/src/scripts/: create_mongo_test_user.py  create_test_user.py
backend/src/service/: auth_service.py  base_service.py  image_service.py  mongo_auth_service.py  mongo_user_service.py  sqlite_user_service.py
frontend/: Dockerfile  Dockerfile.dev  Makefile  README.md  package-lock.json  package.json  prettier.config.js
frontend/docker/: Dockerfile  Dockerfile.dev
frontend/scripts/: setup-env.sh
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/example-page/: page.tsx
frontend/src/app/image-uploader/multi-image/: page.tsx
frontend/src/app/image-uploader/single-image/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: Header.tsx  ImageViewModal.tsx  MultiImageUploader.tsx  SingleImageUploader.tsx  index.ts
frontend/src/lib/: auth.ts
frontend/src/stores/: apiStore.ts  defaultStore.ts  index.ts
