[project]
name = "nextjs-fastapi-backend"
version = "1.0.0"
description = "FastAPI backend with controller-service-repository architecture"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["fastapi", "api", "backend", "nextjs"]

dependencies = [
    # FastAPI Core
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Database drivers
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    
    # MongoDB
    "motor>=3.3.0",  # Async MongoDB driver
    "pymongo>=4.6.0",  # MongoDB driver
    "beanie>=1.23.0",  # MongoDB ODM for Python
    
    # Object Storage (MinIO)
    "minio>=7.2.0",  # MinIO client
    "aiofiles>=23.2.0",  # Async file operations
    
    # File handling
    "python-multipart>=0.0.6",  # File upload support
    "pillow>=10.1.0",  # Image processing
    
    # Pydantic for data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # HTTP client
    "httpx>=0.25.0",
    
    # Environment variables
    "python-dotenv>=1.0.0",
    
    # Logging
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    # Development dependencies
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

mysql = [
    "pymysql>=1.1.0",
]

postgresql = [
    "psycopg2-binary>=2.9.0",
]



[tool.uv]
# UV-specific configuration can go here if needed

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=src"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
] 